[gd_scene load_steps=53 format=2]

[ext_resource path="res://Scripts/Jugador.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/climb/climb-1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/climb/climb-2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/climb/climb-3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/climb/climb-4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/climb/climb-5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/climb/climb-6.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/attack/CortaDistancia.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/shoot/shoot.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/attack/CortaDistanciaAire.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/back-jump/back-jump-2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/back-jump/back-jump-3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/back-jump/back-jump-4.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/back-jump/back-jump-5.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Player/jump/jump-1.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/jump/jump-2.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Player/jump/jump-3.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Player/jump/jump-4.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Player/idle/idle-1.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Player/idle/idle-2.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Player/idle/idle-3.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Player/idle/idle-4.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Player/hurt/hurtRojo.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Player/run/run-1.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Player/run/run-2.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Player/run/run-3.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Player/run/run-4.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Player/run/run-5.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Player/run/run-6.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Player/run/run-7.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Player/run/run-8.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Player/run-shoot/run-shoot-1.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Player/run-shoot/run-shoot-2.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Player/run-shoot/run-shoot-3.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Player/run-shoot/run-shoot-4.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Player/run-shoot/run-shoot-5.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Player/run-shoot/run-shoot-6.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Player/run-shoot/run-shoot-7.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Player/run-shoot/run-shoot-8.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Player/back-jump/back-jump-1.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Player/back-jump/back-jump-6.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Player/crouch/crouch.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Player/wall jump/wall-jump.png" type="Texture" id=43]
[ext_resource path="res://Escenas/EscenaGameOver.tscn" type="PackedScene" id=44]
[ext_resource path="res://Escenas/EscenaPausa.tscn" type="PackedScene" id=45]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Escalar",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "Atacar",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Disparar",
"speed": 2.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "AtacarAire",
"speed": 2.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "Muerte",
"speed": 12.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "DobleSalto",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "Quieto",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": false,
"name": "Danio",
"speed": 4.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "Correr",
"speed": 9.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": false,
"name": "Saltar",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": true,
"name": "CorrerDisparando",
"speed": 9.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 41 ) ],
"loop": false,
"name": "Dash",
"speed": 12.0
}, {
"frames": [ ExtResource( 42 ) ],
"loop": true,
"name": "Agacharse",
"speed": 1.0
}, {
"frames": [ ExtResource( 43 ) ],
"loop": true,
"name": "SaltoPared",
"speed": 1.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": false,
"name": "Caer",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.0
height = 40.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15.333, 37.333 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13, 25 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1, 18 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1, 10.6667 )

[node name="Jugador" type="KinematicBody2D" groups=[
"player",
"persist",
]]
position = Vector2( -5.96046e-008, 6 )
scale = Vector2( 1.5, 1.5 )
z_index = 1
collision_layer = 524289
collision/safe_margin = 0.01
script = ExtResource( 1 )
climb_speed = 150

[node name="Position2DDisparoPie" type="Position2D" parent="."]
position = Vector2( 35.6638, -11.8879 )

[node name="Position2DDisparoAgachado" type="Position2D" parent="."]
position = Vector2( 35.3333, 16.6667 )

[node name="Position2DAtaque" type="Position2D" parent="."]
position = Vector2( 54, -3.99997 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.666667, 0 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "Quieto"
frame = 1
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="Colision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 3.33333, 17.3334 )
shape = SubResource( 2 )

[node name="AreaColisionAux" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 0.666667 )

[node name="ColisionAux" type="CollisionShape2D" parent="AreaColisionAux"]
visible = false
position = Vector2( 3.33333, 50.6667 )
shape = SubResource( 3 )

[node name="CanvasGameOver" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="EscenaGameOver" parent="CanvasGameOver" instance=ExtResource( 44 )]

[node name="CanvasPause" type="CanvasLayer" parent="."]
pause_mode = 1
editor/display_folded = true

[node name="EscenaPausa" parent="CanvasPause" instance=ExtResource( 45 )]
visible = false

[node name="Hitbox" type="Area2D" parent="."]
visible = false
position = Vector2( 1.33333, 0 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( 2, 13.3334 )
shape = SubResource( 4 )

[node name="TimerAtaque" type="Timer" parent="."]
one_shot = true

[node name="TimerDisparo" type="Timer" parent="."]
one_shot = true

[node name="HitboxAgachado" type="Area2D" parent="."]
editor/display_folded = true
visible = false

[node name="ColisionAgachado" type="CollisionShape2D" parent="HitboxAgachado"]
position = Vector2( -3.33333, 26 )
shape = SubResource( 5 )
disabled = true

[node name="Area2DIzda" type="Area2D" parent="."]
position = Vector2( 6.66667, 0.666667 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DIzda"]
position = Vector2( -28.6667, 4.66633 )
shape = SubResource( 6 )

[node name="Area2DDcha" type="Area2D" parent="."]
position = Vector2( -0.666667, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DDcha"]
position = Vector2( 18, 2.66667 )
shape = SubResource( 7 )

[node name="TimerDash" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 3.66667, 13.1667 )
scale = Vector2( 2.83333, 4.25 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="AreaColisionAux" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="AreaColisionAux" to="." method="_on_Hitbox_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
[connection signal="body_shape_entered" from="Hitbox" to="." method="_on_Hitbox_body_shape_entered"]
[connection signal="body_entered" from="Area2DIzda" to="." method="_on_Area2DIzda_body_entered"]
[connection signal="body_exited" from="Area2DIzda" to="." method="_on_Area2DIzda_body_exited"]
[connection signal="body_entered" from="Area2DDcha" to="." method="_on_Area2DDcha_body_entered"]
[connection signal="body_exited" from="Area2DDcha" to="." method="_on_Area2DDcha_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
